--- a/package.json
+++ b/package.json
@@ -1,37 +1,21 @@
 {
-  "name": "nikhilsportfolio",
-  "version": "0.1.0",
-  "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "@fontsource/manrope": "^5.2.6",
-    "@fortawesome/fontawesome-free": "^6.7.2",
-    "@fortawesome/fontawesome-svg-core": "^6.7.2",
-    "@fortawesome/free-brands-svg-icons": "^6.7.2",
-    "@fortawesome/free-regular-svg-icons": "^6.7.2",
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "aos": "^2.3.4",
-    "axios": "^1.10.0",
-    "bootstrap": "^5.3.7",
-    "js-cookie": "^3.0.5",
-    "next": "^15.2.3",
-    "nodemailer": "^7.0.5",
-    "react": "^19.1.0",
-    "react-countup": "^6.5.3",
-    "react-dom": "^19.1.0",
-    "react-hot-toast": "^2.5.2",
-    "react-slick": "^0.30.3",
+    "@fortawesome/fontawesome-free": "^7.0.1",
+    "@fortawesome/free-brands-svg-icons": "^7.0.1",
+    "@fortawesome/free-regular-svg-icons": "^7.0.1",
+    "@fortawesome/free-solid-svg-icons": "^7.0.1",
+    "@fortawesome/react-fontawesome": "^3.0.2",
+    "axios": "^1.12.2",
+    "bootstrap": "^5.3.8",
+    "next": "^15.5.4",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.1"
   }
 }
