--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "next": "^15.5.4",
+    "nodemailer": "^7.0.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-slick": "^0.31.0",
